fix navbar shown narrow on tablet view

--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -20,7 +20,7 @@
     display: flex;
     gap: 1em;
     padding: 1em;
-    width: 350px;
+    width: 600px;
     justify-content: center;
     align-items: center;
     font-size: 1.3rem;
@@ -41,7 +41,7 @@
 }
 
 .navitem {
-  @include flipBtn(100px);
+  @include flipBtn(160px);
   cursor: pointer;
   transition: 1s;
 }
@@ -139,7 +139,26 @@ filter: invert(1);
 
 // responsive
 @media (max-width: 800px) {
-
+  .header {
+    padding: 40px 5em;
+    justify-content: space-between;
+    h4 {
+      font-size: 2.5rem
+    }
+  }
+  .navitem {
+    @include flipBtn(100px);
+    cursor: pointer;
+    transition: 1s;
+  }
+  .navbar {
+    ul {
+      gap: 1em;
+      padding: 1em;
+      width: 400px;
+      font-size: 1rem;
+    }
+  }
 }
 
 @media (min-width: 440px) {
